--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
       "pre-push": "npm test"
     }
   },
-  "files": ["dist"],
-  "keywords": ["express", "actuator", "node"],
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "express",
+    "actuator",
+    "node"
+  ],
   "homepage": "https://github.com/jim-moody/express-actuator-endpoints",
   "repository": {
     "url": "https://github.com/jim-moody/express-actuator-endpoints"
@@ -38,7 +44,7 @@
     "eslint-plugin-jest": "^21.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "husky": "^0.14.3",
+    "husky": "^0.15.0-rc.8",
     "jest": "^22.2.2",
     "mock-fs": "^4.4.2",
     "nodemon": "^1.14.12",
