--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-actuator-endpoints",
-  "version": "0.1.4",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -17,14 +17,8 @@
       "pre-push": "npm test"
     }
   },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "express",
-    "actuator",
-    "node"
-  ],
+  "files": ["dist"],
+  "keywords": ["express", "actuator", "node"],
   "homepage": "https://github.com/jim-moody/express-actuator-endpoints",
   "repository": {
     "url": "https://github.com/jim-moody/express-actuator-endpoints"
